Fix right-to-left score alignment

--- a/src/jquery.bracket.sass
+++ b/src/jquery.bracket.sass
@@ -271,7 +271,6 @@ div.jQBracket.rl
 
     div.score
       float: left
-      text-align: left
 
   .teamContainer
     float: right
